# scram-with-sm3

./: Cargo.toml
src/: client.rs  lib.rs  server.rs  utils.rs
tests/: client_server.rs  debug_standard_data.rs  scram_sm3_test.rs
