[package]
authors = ["Thomas Bahn <thomas@thomas-bahn.net>", "Modified for SM3 support"]
description = "A SCRAM provider library supporting both SHA-256 and SM3."
documentation = "https://docs.rs/scram"
keywords = [ "scram", "authentication", "sha256", "sm3"]
license = "MIT"
name = "scram-with-sm3"
readme = "README.md"
repository = "https://github.com/tomprogrammer/scram"
version = "0.6.0"
edition = "2018"

[features]
default = ["sha256", "sm3"]
sha256 = ["dep:ring"]
sm3 = ["dep:sm3", "dep:hmac"]


[dependencies]
base64 = "0.13.0"
rand = "0.8.0"
ring = { version = "0.16.9", optional = true }
sm3 = { version = "0.4", optional = true }
hmac = { version = "0.12", optional = true }
hex = "0.4"



[badges]
maintenance = { status = "actively-developed" }
